--- a/Flix_app/Base.lproj/Main.storyboard
+++ b/Flix_app/Base.lproj/Main.storyboard
@@ -180,7 +180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QxD-XK-Llc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1327.536231884058" y="31.793478260869566"/>
+            <point key="canvasLocation" x="1451" y="33"/>
         </scene>
         <!--Now Playing -->
         <scene sceneID="uMv-06-Vt1">
